--- a/HQSOFT.Common/host/HQSOFT.Common.HttpApi.Host/HQSOFT.Common.HttpApi.Host.csproj
+++ b/HQSOFT.Common/host/HQSOFT.Common.HttpApi.Host/HQSOFT.Common.HttpApi.Host.csproj
@@ -21,6 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Volo.Abp.Autofac" Version="7.3.0" />
+	<PackageReference Include="Volo.Abp.AspNetCore.SignalR" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="7.3.0" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.PostgreSql" Version="7.3.0" />
